Opened 12 years ago
Closed 12 years ago
#4107 closed defect (fixed)
Strange aspect ratio for broken AVCI-50 mxf stream
| Reported by: | Cesar Monsalvo | Owned by: | |
|---|---|---|---|
| Priority: | normal | Component: | avformat |
| Version: | git-master | Keywords: | h264 mxf |
| Cc: | agaleano@rcntv.com.co | Blocked By: | |
| Blocking: | Reproduced by developer: | yes | |
| Analyzed by developer: | no |
Description
We found when ffprobe excute under panasonic avc intra 50 file that information of this file is incorrect.
Resolution: 1440x1080
Aspect ratio: 4:3
Profile: High 10 Intra.
This is the ffprobe response. command ffprobe 00530I.MXF
ffprobe version 2.4.3 Copyright (c) 2007-2014 the FFmpeg developers
built on Nov 9 2014 17:21:35 with gcc 4.8 (Ubuntu 4.8.2-19ubuntu1)
configuration: --extra-libs=-ldl --prefix=/opt/ffmpeg --enable-avresample --disable-debug --enable-nonfree --enable-gpl --enable-version3 --enable-x11grab --enable-libpulse --enable-libopencore-amrnb --enable-libopencore-amrwb --disable-decoder=amrnb --disable-decoder=amrwb --enable-libx264 --enable-libx265 --enable-libfdk-aac --enable-libvorbis --enable-libmp3lame --enable-libopus --enable-libvpx --enable-libspeex --enable-libass --enable-avisynth --enable-libsoxr --enable-libxvid
libavutil 54. 7.100 / 54. 7.100
libavcodec 56. 1.100 / 56. 1.100
libavformat 56. 4.101 / 56. 4.101
libavdevice 56. 0.100 / 56. 0.100
libavfilter 5. 1.100 / 5. 1.100
libavresample 2. 1. 0 / 2. 1. 0
libswscale 3. 0.100 / 3. 0.100
libswresample 1. 1.100 / 1. 1.100
libpostproc 53. 0.100 / 53. 0.100
[mxf @ 0x1c0f020] Field dominance 0 support is not implemented. Update your FFmpeg version to the newest one from Git. If the problem still occurs, it means that your file has a feature which has not been implemented.
[mxf @ 0x1c0f020] If you want to help, upload a sample of this file to ftp://upload.ffmpeg.org/incoming/ and contact the ffmpeg-devel mailing list. (ffmpeg-devel@ffmpeg.org)
[mxf @ 0x1c0f020] material track 3: no corresponding source track found
[h264 @ 0x1c12360] Overread VUI by 5 bits
Last message repeated 1 times
[h264 @ 0x1c12360] non-existing SPS 32 referenced in buffering period
Last message repeated 21 times
[mxf @ 0x1c0f020] Stream #0: not enough frames to estimate rate; consider increasing probesize
Input #0, mxf, from 'VIDEO/00530I.MXF':
Metadata:
uid : cfc9846d-b00c-498b-a592-e03aeb5893a8
generation_uid : 500ca0e5-a7a5-46f7-876b-f8dd73d52144
company_name : Panasonic
product_name : P2
product_version : 2.0
product_uid : 060e2b34-0401-0108-0e0e-010101000001
modification_date: 2011-05-27 17:55:10
timecode : 00:10:55;22
Duration: 00:00:25.49, start: 0.000000, bitrate: 55742 kb/s
Stream #0:0: Video: h264 (High 10 Intra), yuv420p10le(pc, bt709), 1440x1080 [SAR 3:4 DAR 1:1], 29.97 fps, 29.97 tbr, 29.97 tbn, 59.94 tbc
[h264 @ 0x1c12c80] Overread VUI by 5 bits
Have FFMPEG support under avc intra 50 files?.
Change History (5)
comment:1 by , 12 years ago
| Keywords: | h264 added |
|---|---|
| Priority: | important → normal |
comment:2 by , 12 years ago
| Keywords: | h264 removed |
|---|---|
| Priority: | normal → important |
You can download the file from this url http://bit.ly/1uawNkH
comment:3 by , 12 years ago
| Keywords: | h264 added |
|---|---|
| Priority: | important → normal |
| Version: | 2.4.3 → git-master |
comment:4 by , 12 years ago
| Keywords: | mxf added |
|---|---|
| Reproduced by developer: | set |
| Status: | new → open |
| Summary: | Codec Avc Intra 50 or 100 failed → Strange aspect ratio for broken AVCI-50 mxf stream |
The (broken) sample aspect ratio is actually written to the h264 stream, the mxf container tells the correct (display) aspect ratio.
Possible patch sent: http://thread.gmane.org/gmane.comp.video.ffmpeg.devel/185565
comment:5 by , 12 years ago
| Component: | undetermined → avformat |
|---|---|
| Resolution: | → fixed |
| Status: | open → closed |
Fixed in 92c07acce736c64592c4c3232b4d0dacbe2f27f7
Thank you for the report and the sample!



Please provide the sample.