Read (display) aspect ratio from mxf files.

Fixes ticket #4107.